--- a/service.yml
+++ b/service.yml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: spring-boot-hello
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: spring-boot-hello
   ports:
